--- a/index.html
+++ b/index.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dream Five</title>
+
+    <!-- font link  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Philosopher:ital,wght@1,700&display=swap" rel="stylesheet">
+
+    <!-- bootstrap link  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+    <!-- css file link  -->
     <link rel="stylesheet" href="styles/style.css">
  </head>
  <body>
+    <header class="bg-dark  d-flex align-items-center text-center">
+        <section class="container d-flex justify-content-center ">
+            <div class="">
+                <h1>Select Your Best Five</h1>
+            <p class="text-white text-muted mt-3">
+                Wow your most favorite game of cricket is here Top 5 The Dream Five Game <br> So what's the delay now select your favorite top 5 players and jump on The Dream Five
+            </p>
+            </div>
+        </section>
+    </header>
     
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="script/utilitis.js"></script>
  </body>
  </html>
